[package]
name = "arihant-inventory"
version = "0.1.0"
authors = ["Siddharth Gelera <ahoy@barelyhuman.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { version = "0.5.4" }
rustbreak = "1.4.0"
serde_json = "1.0.51"
serde_derive = "1.0.106"
serde = "1.0.106"


